Added screenshots and updated README to include a link to the published extension in the chrome webstore.

--- a/README
+++ b/README
@@ -8,6 +8,7 @@ README:
 
 This is a very simple extension for Google Chrome. When you find yourself on a website that is taking too much of your time, simply hit the Blacklist button in the upper right corner of Chrome and you will be blocked from visiting that site while Blacklist remains active. To resume visiting any site blocked by Blacklist, you must visit the site, click the Blacklist extension button in the upper right corner of the browser, and then click the "unlist" button. You will be forced to wait for 15 seconds before the site is unlisted and you are redirected to the root url.
  
-To install this beta extension, download the code from GitHub, extract it, and then add it to Chrome as detailed in step 4 of Create and Load Extensions on this page: http://developer.chrome.com/extensions/getstarted.html.
+This extension is released for free in and can be installed directly from the Chrome store at https://chrome.google.com/webstore/detail/blacklist/jbpccandodannohfaoncogijbkfcmpgo?hl=en&gl=US.
+Alternatively, to install this extension directly from the source, download the code from GitHub, extract it, and then add it to Chrome as detailed in step 4 of Create and Load Extensions on this page: http://developer.chrome.com/extensions/getstarted.html.
  
 To completely disable Blacklist, return to chrome://extensions and uncheck the box next to Blacklist.
